Fix[theme]: englobe all <p> into a <div> for align left

--- a/src/components/links/styles.module.scss
+++ b/src/components/links/styles.module.scss
@@ -9,7 +9,7 @@
 
   > img {
     color: $text-primary;
-    margin-right: 15px;
+    margin-right: 20px;
   }
 
   > a {
